ProcessBuilder instead of Runtime.exec